@@ -44,7 +44,9 @@ class Gcompris_administration:
     list_modules = []
     
     import glob
-    m_list = glob.glob(gcompris.DATA_DIR+'/../python/admin/module_*.py')
+    m_list = glob.glob('admin/module_*.py')
+    if m_list == []:
+      m_list = glob.glob(gcompris.DATA_DIR+'/../python/admin/module_*.py')
     for file in m_list:
       m_name = file.split('/')[-1].split('.')[0].split('_')[1]
       list_modules.append(m_name)
