@@ -1,3 +1,11 @@
+2005-07-07  Yves Combe  <yves@ycombe.net>
+
+	add treeview with icons for boards configuration.
+
+	* src/boards/python/admin/board_list.py:
+	* src/boards/python/admin/module_boards.py:
+	* src/boards/python/administration.py:
+
 2005-07-07  Bruno coudoin  <bruno.coudoin@free.fr>
 
 	Fixed the POTFILES.in
